Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignObjectField.quorum
class Main
    Object v
    action Main
        v:SetValue()
        Test(v)
    end

    action Test(undefined var)
    end
end
